<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Tip Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="bill_amount">Bill Amount:</string>
    <string name="tip_percentage">Tip:</string>
    <string name="tip_hint">Use the slider to select between 0 and 100.</string>
    <string name="total_bill">Total Bill:</string>
    <string name="tip_amount">Tip Amount:</string>
    <string name="suggested_tips">Suggested Tip Amounts</string>
    <string name="percent_fifteen">15%</string>
    <string name="percent_eighteen">18%</string>
    <string name="percent_twenty">20%</string>
    <string name="equals">=</string>

</resources>
